--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -69,5 +71,5 @@ body {
   @apply bg-white text-black transition-colors duration-300;
 }
 .dark body {
-  @apply bg-black text-white;
+  @apply bg-[#131313] text-white;
 }
